--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --port 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "sync:strapi:types": "mkdir -p src/types/strapi && cp ../cms/types/generated/*.d.ts src/types/strapi/",
+    "sync:strapi:types:install": "pnpm -C ../cms run generate:types && pnpm run sync:strapi:types"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
